fix background color and alignment of dropdown

--- a/css/components/navigation-dropdown.css
+++ b/css/components/navigation-dropdown.css
@@ -114,14 +114,30 @@
 @media (max-width: 768px) { 
     .header-dropdown-container {
         width: 361px;
+        background-color: #FFE1D640;
     }
 
     .dropdown-card-sda {
         flex-direction: column;
     }
 
+    .header-dropdown__right .card__content-image,
+    .header-dropdown__right .card__content__text {
+        flex: 1;
+    }
+
     .header-dropdown__right {
         padding-left: 0;
+        border-left: 0;
+    }
+
+    .header-dropdown__right .card__content.column {
+        flex-direction: row;
+    }
+
+    .header-dropdown-img {
+        width: 100%;
+        border-radius: 8px;
     }
 
 }
